# deep

./: .gitignore  CMakeLists.txt  DeepConfig.h.in  README  README.md  ann_data.c  clique.cpp  clique.h  commandline.cpp  commandline.h  contour.cpp  contour.h  cost_functions.cpp  cost_functors.h  cubic_spline.cpp  cubic_spline.h  db_1d.cpp  db_1d.h  db_match_1d.cpp  db_match_1d.h  db_match_global_1d.cpp  db_match_global_1d.h  dnn_base.cpp  dnn_base.h  dnn_picker.cpp  dnn_picker.h  dosy.cpp  dosy.h  example.py  fid_1d.cpp  fid_1d.h  fid_2d.cpp  fid_2d.h  fwhh_dnn.cpp  fwhh_dnn.h  hungary.cpp  hungary.h  installation.html  kiss_fft.c  kiss_fft.h  (+83 more)
ann_train/: peak.py
ann_train/validation_set/: coor.xvg
libcerf/: CMakeLists.txt  cerf.h  err_fcts.c  w_of_z.c
test/: acqu2s  acqus  ass.list  peaks_ass.tab  plane001.ft2  plane002.ft2  plane003.ft2  test_dp.pl  test_fid_phase.pl  test_peak_match.pl  test_vf.pl  test_vf2.pl  test_vf2_omp.pl
